<resources>
    <string name="app_name">一元购</string>
    <string name="btntext">充值</string>
    <string name="Integral">积分</string>
    <string name="service">联系客服</string>
    <string name="group">一键加群</string>
    <string name="login_edit1">昵称/手机号</string>
    <string name="login_edit2">密码</string>
    <string name="login_text">忘记密码 ？</string>
    <string name="login_text2">使用第三方登录</string>
    <string name="login_btn1">登录</string>
    <string name="login_btn2">快速注册</string>
    <string name="login_btn3">QQ登录</string>
    <string name="login_btn4">微信登录</string>
    <string name="register_text">注册</string>
    <string name="register_edit1">请输入手机号</string>
    <string name="register_edit2">请输入验证码</string>
    <string name="register_edit3">请输入您的密码(6-20位数字或字母)</string>
    <string name="register_edit4">请再次确认您的密码</string>
    <string name="register_btn">立即注册</string>
    <string name="register_btn2">获取验证码</string>
    <string name="register_btn3">《用户使用协定》</string>
    <string name="register_text2">*为了保证您的安全,我们会向您的手机发送短信验证码</string>
    <string name="register_text3">我已阅读同意</string>
    <string name="retrieve_text">验证码将以短信的形式发给您,请注意查收</string>
    <string name="retrieve_btn">完成</string>
    <string name="search_text">取消</string>
    <string name="search_edit">请输入您感兴趣的商品</string>
    <string name="toptext">充值金额用于购买云盘空间并获得等量欢乐豆，其中充值金额100,300,500可同时参与不中包赔活动</string>
    <string name="toptext2">单次购买需两元起,充值后用欢乐豆购买无限制</string>
</resources>

