<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5F7">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkorange">
        <ImageView
            android:id="@+id/retrieve_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/bg_back"
            android:layout_marginLeft="10dp"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableLeft="@mipmap/bg_rephone"
            android:textSize="16dp"
            android:hint="@string/register_edit1"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#F6f6f6"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableLeft="@mipmap/bg_reemail"
                android:textSize="16dp"
                android:hint="@string/register_edit2"
                android:drawablePadding="5dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:paddingLeft="15dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/register_btn2"
                android:textColor="@color/subjectcolor"
                android:background="@drawable/loginbtn_bolder"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#F6f6f6"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableLeft="@mipmap/bg_repass"
            android:textSize="16dp"
            android:hint="@string/register_edit3"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#F6f6f6"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableLeft="@mipmap/bg_repass"
            android:textSize="16dp"
            android:hint="@string/register_edit4"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_text"
            android:textSize="12dp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/retrieve_btn"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bolder"/>


    </LinearLayout>

</LinearLayout>